# nordic-preproc

./: .gitignore  LICENSE  README.md  pyproject.toml
env/: conda-minimal.yml  conda.yml
env/legacy/: conda-minimal-ginsburg.yml
src/nordic_preproc/: __init__.py  bids.py  nifti_ops.py  noise.py
src/nordic_preproc/backends/: __init__.py  matlab_engine.py  mcr.py
src/nordic_preproc/cli/: bids_run.py  run.py
tests/: test_noise.py  test_split.py
